# WayangGUI

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  JAVAGUI.pro  Makefile  Makefile-prepend  QREncode.cmake  README.md  Wayang.cmake  WayangGUI.pro  WayangWallet.cmake
doc/: howto  howto.md  teamlist
src/: wayang.desktop.desktop  wayangwallet.desktop.desktop
src/gui/: AboutDialog.cpp  AboutDialog.h
src/gui/ui/: aboutdialog.ui  mainwindow.ui  miningframe.ui
